#ifndef CHARACTER_H
#define CHARACTER_H

#include "dynamicentity.h"

/**
 * @brief The Character abstract class, represent a character entity, with fixed size
 */
class Character : public DynamicEntity
{
public:
    Character();
};

#endif // CHARACTER_H
